--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,43 @@ body {
   background-color: #f6f6f2;
   color: #388087;
 }
+
+h3.beer-name {
+  background-color: #c2edce;
+}
+
+button.reused-button {
+  background-color: rgb(227, 138, 89);
+  color: #f6f6f2;
+  height: 5rem;
+  width: auto;
+  font-size: 1.5rem;
+  padding: 1%;
+  cursor: pointer;
+  outline: none;
+  box-shadow: none;
+}
+
+input {
+  display: block;
+  margin: auto auto;
+  height: 2.5rem;
+  width: 30vw;
+  margin-bottom: 2%;
+  background-color: transparent;
+  border: 1px solid #388087;
+  border-radius: 5%;
+  padding: 1%;
+  outline: none;
+  box-shadow: none;
+}
+
+button.new-keg-button {
+  display: block;
+  margin: auto auto;
+  width: 25vw;
+  height: 2.5rem;
+  font-size: 1.5rem;
+  background-color: #388087;
+  color: #f6f6f2;
+}
